SERVER-134017 Fall back from SBE idLookup when kNotHandled (#61691)

GitOrigin-RevId: 7e1d03a129d29b4581bf0419003b9db2ea397bb6