src/mongo/db/exec/agg/search/internal_search_id_lookup_stage.cpp
@@ -90,16 +90,20 @@ std::unique_ptr<SingleDocumentLookupExecutor> buildIdLookupExecutor(
     const bool optimizedLookupEnabled = ifrContext &&
         ifrContext->getSavedFlagValue(feature_flags::gFeatureFlagSearchOptimizedIdLookup);
 
-    // Optimized fast path (flag on, no view): the SBE point-read executor, reusing the stage's
-    // upfront acquisition and caching a parameterized '{_id}' plan across the batch window. The
-    // lookup always runs local (search index is on-shard), so AlwaysLocalEligibility; a sharded
-    // collection's orphans are dropped by the SHARDING_FILTER the executor adds above the scan.
+    // Optimized fast path (flag on, no view): SBE point-read, with the local-read executor as
+    // fallback when SBE returns kNotHandled (e.g. object _id that SlotBinder cannot encode).
+    // Search always runs local, so AlwaysLocalEligibility; a sharded collection's orphans are
+    // dropped by the SHARDING_FILTER SBE adds above the scan.
     if (optimizedLookupEnabled && !viewPipeline) {
-        return std::make_unique<SbeSingleDocumentLookupExecutor>(
+        auto sbe = std::make_unique<SbeSingleDocumentLookupExecutor>(
             std::make_unique<PreAcquiredCollectionAcquirer>(
                 catalogResourceHandle->getStasher(),
                 catalogResourceHandle->getCollectionForLookupExecutor()),
             std::make_unique<AlwaysLocalEligibility>());
+        auto localRead = std::make_unique<InternalSearchIdLookUpLocalReadExecutor>(
+            catalogResourceHandle, boost::none /* view */);
+        return std::make_unique<PrimaryWithFallbackSingleDocumentLookupExecutor>(
+            std::move(sbe), std::move(localRead));
     }
 
     // Local-read path: `$match`-on-_id (optionally + view pipeline) against the stashed
@@ -226,8 +230,9 @@ boost::optional<Document> InternalSearchIdLookUpStage::enrich(Document event) {
             "Collection should exist when using $_internalSearchIdLookup",
             pExpCtx->getUUID().has_value());
 
-    // Resolve the _id. The executor always handles a bare _id lookup, so the result is found or
-    // not-found (a miss -- deleted doc or orphan -- is dropped below), never kNotHandled.
+    // Resolve the _id. The installed executor (SBE + local-read fallback, or local-read alone)
+    // always handles a bare _id lookup, so the result is found or not-found (a miss -- deleted
+    // doc or orphan -- is dropped below), never kNotHandled.
     using HandledStatus = SingleDocumentLookupExecutor::LookupResult::HandledStatus;
     auto lookupResult = _lookupExecutor->performLookup(pExpCtx,
                                                        pExpCtx->getNamespaceString(),
